# CPFL-Autoware

./: .travis.yml  cuda_install.bash
ros/src/.config/rviz/: default.rviz  op_planner_sim.rviz  winser.rviz
ros/src/common/libs/amathutils_lib/include/amathutils_lib/: amathutils.hpp
ros/src/common/libs/amathutils_lib/src/: Amathutils.cpp
ros/src/common/libs/state_machine_lib/: CMakeLists.txt
ros/src/common/libs/state_machine_lib/include/state_machine_lib/: state.hpp  state_common.hpp  state_context.hpp
ros/src/common/libs/state_machine_lib/src/: state_context.cpp
ros/src/computing/perception/localization/lib/fast_pcl/ndt_gpu/: CMakeLists.txt
ros/src/computing/perception/localization/lib/fast_pcl/ndt_gpu/include/fast_pcl/ndt_gpu/: NormalDistributionsTransform.h  Registration.h
ros/src/computing/perception/localization/lib/fast_pcl/ndt_gpu/src/: NormalDistributionsTransform.cu  Registration.cu  VoxelGrid.cu
ros/src/computing/perception/localization/lib/gnss/: CMakeLists.txt
ros/src/computing/perception/localization/lib/gnss/include/gnss/: geo_pos_conv.hh
ros/src/computing/perception/localization/lib/gnss/src/: geo_pos_conv.cpp
ros/src/computing/perception/localization/lib/ndt_gpu/: CMakeLists.txt
ros/src/computing/perception/localization/lib/ndt_gpu/include/ndt_gpu/: Matrix.h  MatrixDevice.h  MatrixHost.h  NormalDistributionsTransform.h  Registration.h  SymmetricEigenSolver.h  VoxelGrid.h
ros/src/computing/perception/localization/lib/ndt_gpu/src/: Matrix.cu  MatrixDevice.cu  MatrixHost.cu  NormalDistributionsTransform.cu  Registration.cu  SymmetricEigenSolver.cu  VoxelGrid.cu
ros/src/computing/perception/localization/lib/pcl_omp/registration/: CMakeLists.txt
ros/src/computing/planning/common/lib/openplanner/op_planner/: CMakeLists.txt  Makefile
ros/src/computing/planning/common/lib/openplanner/op_planner/include/: BehaviorPrediction.h  BehaviorStateMachine.h  DecisionMaker.h  GPUCalculationHelper.h  LocalPlannerH.h  MappingHelpers.h  PassiveDecisionMaker.h  PlannerH.h  PlanningHelpers.h  RoadNetwork.h  SimuDecisionMaker.h  TrajectoryCostsOnGPU.h  TrajectoryCostsOnGPU_Kernel.h
ros/src/computing/planning/common/lib/openplanner/op_planner/src/: BehaviorPrediction.cpp  BehaviorStateMachine.cpp  DecisionMaker.cpp  GPUCalculationHelper.cu  LocalPlannerH.cpp  MappingHelpers.cpp  PassiveDecisionMaker.cpp  PlannerH.cpp  PlanningHelpers.cpp  SimuDecisionMaker.cpp  TrajectoryCosts.cpp  TrajectoryCostsOnGPU.cu  TrajectoryCostsOnGPU_Kernel.cu
ros/src/computing/planning/common/lib/openplanner/op_ros_helpers/: CMakeLists.txt
ros/src/computing/planning/common/lib/openplanner/op_ros_helpers/include/: PolygonGenerator.h  op_RosHelpers.h
ros/src/computing/planning/common/lib/openplanner/op_ros_helpers/src/: op_RosHelpers.cpp
ros/src/computing/planning/common/lib/openplanner/op_simu/: CMakeLists.txt  Makefile
ros/src/computing/planning/common/lib/openplanner/op_simu/include/: SimpleTracker.h
ros/src/computing/planning/common/lib/openplanner/op_simu/src/: SimpleTracker.cpp  TrajectoryFollower.cpp
ros/src/computing/planning/common/lib/openplanner/op_utility/include/: DataRW.h
ros/src/computing/planning/common/lib/openplanner/op_utility/src/: DataRW.cpp
ros/src/msgs/autoware_msgs/msg/: CloudCluster.msg  ConfigVelocitySet.msg  DetectedObject.msg  image_rect.msg
ros/src/msgs/autoware_msgs/msg/config/: ConfigDecisionMaker.msg
vehicle/zmp/autoware_socket/: can.cpp  cmd.cpp  drv.cpp  str.cpp
vehicle/zmp/hevsim/: .gitignore  Makefile  autoware_config.h  config  hevsim.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
vehicle/zmp/hv2/patch/: autoware_config.h  mainwindow.cpp.patch  mainwindow.h.patch
